@@ -1,3 +1,11 @@
+2002-07-04  Anders Eriksson  <anders@umunet.org>
+
+	* src/gerbv.c: Statusbar => Label to allow setting a fixed
+	  width font and thus avoid getting the coordinates to move
+	  as the number of digits change. Moved font names to header
+	  file. We should consider using a rc-file for font names and
+	  colours and stuff.
+
 2002-07-02  Anders Eriksson  <anders@umunet.org>
 
 	* src/gerbv.c, src/gerbv_screen.h: Macrofied coordinate unit
